stopping auto zoom on mobile

--- a/src/Input.css
+++ b/src/Input.css
@@ -59,5 +59,6 @@
 @media only screen and (max-width: 600px) {
     .input {
         width: 250px;
+        font-size: 16px;
     }
 }
